--- a/src/App.scss
+++ b/src/App.scss
@@ -19,32 +19,92 @@
   padding: .5rem;
 }
 
-
-.header {
+// first-section
+.first-section {
   background: url('./assets/images/beijing.png') no-repeat;
   background-position: right center;
   background-size: cover;
   background-attachment:scroll;
   background-position: content-box;
-  background-size:80% 100%;
+  background-size:60% 100%;
   // padding-top: 12rem;
   // padding-left: 12rem;
   // height: 24.5rem;
   overflow: hidden;
+
+  &-mobile {
+    background-size:80% 100%;
+  }
+
+  .menu-mobile {
+    color: #FFD755;
+    letter-spacing: .2rem;
+  }
+
+  .nav {
+    width: 90%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 0 auto;
+    padding: 1rem 0;
+
+    &-right {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+
+      &-ul {
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+  
+        &-item {
+          display: inline-block;
+          font-weight: bold;
+          color: #4B2D18;
+          line-height: 1.4;
+          white-space: nowrap;
+          margin-right: .5rem;
+        }
+      }
+    }
+  }
+
   &-content {
     margin-top: 12rem;
     margin-left: 12rem;
     text-align: start;
 
-    h1 {
-      font-size: 2.5rem;
+    &-mobile {
+      margin-top: 1rem;
+      margin-left: 1rem;
     }
-  
-    p {
-      max-width: 27rem;
-      font-size: 0.75rem;
-      margin-top: .75rem;
-      line-height: 1.6;
+
+    .title-mobile {
+      font-size: 2rem;
+      font-weight: bold;
+      color: #4B2D18;
+      line-height: 1.4;
+    }
+
+    .title-pc {
+      font-size: 2.5rem;
+      font-weight: bold;
+      color: #4B2D18;
+      line-height: 1.4;
+      letter-spacing: .1em;
+    }
+
+    .desc {
+      margin-top: .785rem;
+
+      p {
+        font-size: 1rem;
+        color: #4B2D18;
+        line-height: 1.6;
+        text-shadow: 1px 1px 0px #EFF8F3;
+      }
     }
   }
 
@@ -54,8 +114,23 @@
     align-items: center;
     margin-top: 1.5rem;
 
-    .button:not(:first-child) {
-      margin-left: 10px;
+    .button {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background: #FFD755;
+      border-radius: 1rem;
+      padding: .5rem .8rem;
+      font-size: 1rem;
+      white-space: nowrap;
+
+      &:not(:first-child) {
+        margin-left: 10px;
+      }
+
+      span {
+        margin-left: .5rem;
+      }
     }
   }
 
@@ -65,9 +140,13 @@
     align-items: center;
     margin-top: 1.2rem;
     margin-bottom: 2.5rem;
-
-    img:not(:first-child) {
+    
+    a:not(:first-child) {
       margin-left: 10px;
+    }
+
+    img {
+      border-radius: 50%;
     }
   }
 }
@@ -110,21 +189,36 @@
   .content {
     margin-top: 4rem;
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
     align-items: stretch;
 
     .item {
       display: flex;
       flex-direction: column;
-      justify-content: center;
+      justify-content: flex-start;
       align-items: center;
       overflow: hidden;
-      width: 20%;
       padding: 3rem 1rem 2rem 1rem;
       background: #FFFFFF;
       box-shadow: 0px 1px 23px 0px rgba(129,115,104,0.16);
       border-radius: 23px;
-      border: 1px solid red;
+
+      &-mobile {
+        width: 90%;
+
+        &:not(:first-child) {
+          margin-top: 1.75rem;
+        }
+      }
+
+      &-pc {
+        width: 20%;
+
+        &:not(:first-child) {
+          margin-left: 1.75rem;
+        }
+      }
 
       .title {
         font-size: 1rem;
@@ -141,10 +235,6 @@
         margin-top: 1.25rem;
         text-align: left;
       }
-
-      &:not(:first-child) {
-        margin-left: 1.75rem;
-      }
     }
   }
 }
@@ -160,6 +250,15 @@
     margin: 0 auto;
   }
 
+  h1,
+  h2 {
+    font-size: 2.5rem;
+    font-weight: bold;
+    color: #4B2D18;
+    line-height: 1.4;
+    margin-top: 4rem;
+  }
+
   &-content {
     width: 80%;
     margin-top: 5rem;
@@ -169,33 +268,30 @@
     overflow: hidden;
     padding-left: 10%;
     box-sizing: content-box;
+    padding-bottom: 2rem;
+
+    &-mobile {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+    }
 
     &-img {
-      width: 280px;
+      width: 30rem;
       margin-right: 2rem;
     }
   
-    h2 {
-      font-size: 2rem;
-      font-weight: bold;
-      color: #4B2D18;
-      line-height: 1.4;
-      margin-top: 5rem;
-    }
-
     .desc-box {
-      width: 80%;
-      // display: grid;
-      // grid-template-columns: repeat(1, 1fr);
-      // grid-column-gap: 1rem;
+      display: grid;
+      grid-template-columns: repeat(1, 1fr);
+      grid-column-gap: 1rem;
       display: flex;
       flex-wrap: wrap;
       justify-content: center;
       align-items: center;
 
       p {
-        width: 280px;
-        
         text-align: left;
         line-height: 1.2;
         margin: 1rem 0;
@@ -203,16 +299,7 @@
     }
   }
 
-  .title {
-    font-size: 2rem;
-    font-weight: bold;
-    color: #4B2D18;
-    line-height: 1.4;
-    text-align: center;
-  }
-
   .desc {
-    // width: 
     font-size: .625rem;
     color: #4B2D18;
     line-height: 1.4;
@@ -227,8 +314,16 @@
 
 // sixth-section
 .sixth-section {
-  height: 200px;
-  background: #fff;
+  background: linear-gradient(138deg, #FFFFFF 0%, #FFFAE9 100%);
+  padding: 4rem 0;
+
+  .title {
+    font-size: 2.5rem;
+    margin: 0 auto;
+    font-weight: bold;
+    color: #4B2D18;
+    line-height: 1.4;
+  }
 }
 
 
@@ -237,8 +332,8 @@
   padding: 5rem 0;
   background: #FFD755;
 
-  h1 {
-    font-size: 2rem;
+  .title {
+    font-size: 2.5rem;
     margin: 0 auto;
     font-weight: bold;
     color: #4B2D18;
@@ -246,12 +341,18 @@
   }
 
   &-content {
-    width: 80%;
+    width: 90%;
     margin: 0 auto;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    grid-gap: 1rem 1rem;
+    grid-gap: 2rem 2rem;
     margin-top: 3rem;
+
+    &-mobile {
+      grid-template-columns: repeat(3, 1fr);
+      grid-gap: 1rem 1rem;
+      margin-top: 1rem;
+    }
   }
 }
 
@@ -261,7 +362,7 @@
   padding-top: 5rem;
 
   h1 {
-    font-size: 2rem;
+    font-size: 2.5rem;
     font-weight: bold;
     color: #4B2D18;
     line-height: 1.4;
@@ -297,12 +398,14 @@
       h3 {
         font-size: .75rem;
         font-weight: bold;
-        line-height: 1.4rem;
+        color: #4B2D18;
+        line-height: 1.4;
       }
 
       p {
         line-height: 1.4;
         font-size: .625rem;
+        color: #817368;
       }
       .group {
         margin-top: .625rem;
@@ -310,6 +413,15 @@
 
       .desc {
         margin-top: .375rem;
+      }
+
+      a {
+        word-break: break-all;
+        color: #009BFF;
+      }
+
+      img {
+        margin: .4rem 0;
       }
 
 
@@ -335,7 +447,7 @@
     justify-content: center;
     align-items: center;
   
-    img:not(:first-child) {
+    a:not(:first-child) {
       margin-left: .875rem;
     }
   }
@@ -396,4 +508,226 @@
   font-size: 12px;
   line-height: 1.4;
   background: #f5f5f5;
+}
+
+// 活动进展图
+.activity-content {
+  padding: 3rem 0 ;
+}
+.activity {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: .5rem 0;
+}
+.circle {
+  display: inline-block;
+  width: 14px;
+  height: 14px;
+  border-radius: 50%;
+  background:#FFD755;
+}
+
+.hollow-circle {
+  display: inline-block;
+  box-sizing: border-box;
+  width: 14px;
+  height: 14px;
+  border-radius: 50%;
+  background: #fff;
+  border: 2px solid #FFD755;
+  box-shadow: 0px 1px 8px 0px rgba(129,115,104,0.16)
+}
+
+.time {
+  position: relative;
+  display: inline-block;
+  font-weight: bold;
+  margin-top: 10px;
+  color: #4B2D18;
+  line-height: 1.4;
+}
+
+.arrow {
+    writing-mode: vertical-rl;
+    color: #817368;
+    letter-spacing:  4px;
+    margin-top: 10px;
+}
+
+.bubble {
+  position: absolute;
+  width: 350px;
+  background: #fff;
+  border-radius: 10px;
+  vertical-align: center;
+  box-shadow: 0px 1px 23px 0px rgba(129,115,104,0.16);
+
+  &-text {
+    min-height: 45px;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    text-align: left;
+    font-weight: bold;
+    color: #4B2D18;
+    font-size: 1rem;
+    padding: .3rem .3rem .3rem 1.5rem;
+  }
+
+  &:after{
+    content:'';
+    position:absolute;
+    right: 98%;
+    top: -10px;
+    width:20px;
+    height:23px;
+    border-width:0;
+    border-style:solid;
+    border-color:transparent;
+    border-bottom-width:12px;
+    border-bottom-color:currentColor;
+    border-radius:0 0 0 46px;
+    // box-shadow: 0px 1px 23px 0px rgba(129,115,104,0.16);
+    color: #fff;
+  }
+
+  &-right {
+    left: 140px;
+    top: -10px;
+
+    &-active {
+      background: #FFD755;;
+
+      &::after {
+        color: #FFD755;
+      }
+    }
+
+    &-mobile {
+      left: 6rem;
+      width: 10rem;
+    }
+  }
+
+  &-left {
+    position: absolute;
+    right: 140px;
+    top: -10px;
+    background: #fff;
+    border-radius: 10px;
+
+    &-active {
+      background: #FFD755;
+
+      &::after {
+        color: #FFD755;
+      }
+    }
+
+    &-mobile {
+      right: 6rem;
+      width: 10rem
+    }
+
+    &:after{
+      content:'';
+      position:absolute;
+      left: 99%;
+      top:0px;
+      width:16px;
+      height:16px;
+      border-width:0;
+      border-style:solid;
+      border-color:transparent;
+      border-bottom-width:10px;
+      border-bottom-color:currentColor;
+      border-radius:0 0 32px 0;
+      color: #fff;
+      // color: #FFD755;
+    }
+  }
+}
+
+
+// DropMenu(语言切换菜单）
+.DropMenu {
+  position: relative;
+
+  &-content {
+    position: absolute;
+    top: 30px;
+    left: -6px;
+
+    &-box {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      padding: .5rem .6rem;
+      background: #fff;
+      box-shadow: 0px 1px 3px 0px rgba(72,72,72,0.2);
+      border-radius: 3px;
+
+      &-ul {
+        display: flex;
+
+        &-item {
+          display: inline-block;
+          font-weight: bold;
+          color: #4B2D18;
+          line-height: 1.4;
+          white-space: nowrap;
+          margin-right: .5rem;
+          border: 1px solid red;
+        }
+      }
+
+      img:not(:first-child) {
+        margin-top: 1rem;
+      }
+    }
+  }
+}
+
+
+.Menu {
+  position: relative;
+
+  &-content {
+    position: absolute;
+    top: 1.5rem;
+    right: 0;
+    z-index: 1000;
+
+    &-ul {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: flex-start;
+      padding: .5rem .6rem;
+      background: #fff;
+      box-shadow: 0px 1px 3px 0px rgba(72,72,72,0.2);
+      border-radius: 3px;
+
+      &-item {
+        display: block;
+        font-weight: bold;
+        color: #4B2D18;
+        line-height: 1.4;
+        white-space: nowrap;
+        margin-right: .5rem;
+
+        &:hover,
+        &:focus,
+        &:active {
+          // background: rgba(0, 0, 0, .001);
+        }
+
+        &:not(:first-child) {
+          margin-top: .5rem;
+        }
+      }
+    }
+  }
 }
